# clinical-trial-outcome-predictor

./: .dockerignore  .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
config/: params.yaml  paths.yaml
docker/: Dockerfile  docker-compose.yml
notebooks/: 01_logistic_regression_deep_dive.ipynb
scripts/: audit_cleaned_trials.py  audit_transformed_trials.py  audit_trials.py  clean_data.py  ingest_trials.py  inspect_data.py  run_preparation.py  run_training.py  run_transformation.py  transform_trials.py
scripts/inspections/: audit_cleaned_trials.py  audit_transformed_trials.py  inspect_ingested_data.py  inspect_raw_data.py  inspect_transformed_data.py  run_audit_processed.py  run_inspect_interim.py  run_inspect_raw.py
src/api/: app.py  schemas.py
src/features/: build_features.py
src/inspections/: audit_dataframe.py  audit_processed.py  inspect_interim.py  inspect_raw.py  inspect_raw_data.py  inspect_transformed_data.py
src/pipelines/: clean.py  data_ingestion.py  data_preparation.py  data_transformation.py  ingest_trials.py  model_training.py  transform.py
src/utils/: cleaning.py  config_loader.py  flattening.py  ingestion.py
tests/: test_api.py  test_features.py
